--- a/index.css
+++ b/index.css
@@ -64,6 +64,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0px;
 }
 .weather {
   color: #d4d4d4;
